20_petunia/services/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  labels:
    app: excalidraw
spec:
  selector:
    app: excalidraw
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
